--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lib",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,5 +29,7 @@
     "jshint-stylish": "^2.2.1",
     "lodash": "^4.17.4",
     "matchdep": "^1.0.1"
-  }
+  },
+  "dependencies": {},
+  "description": ""
 }
